<resources>
    <string name="app_name">Weather</string>
    <string name="action_settings">Settings</string>
    <string name="Welcome">Welcome</string>
    <string name="select_date">Please select the date of your trip</string>
    <string name="select_City">Please search and select the city you want to visit</string>
    <string name="SearchCity">Search City</string>
    <string name="Bt_Load">Confirm</string>
    <string name="Top10">Try our top 10 visited cities</string>
    <string name="SignIn">Sign In</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="SignUp">Sign Up</string>
    <string name="Aux">Or, If you do not have an account, create one</string>
    <string name="Aux2">Or, if you already have an account, Sign in</string>
    <string name="Error">Not Valid User!</string>
    <string name="Error_Empty">All fields are required</string>
    <string name="Signup">Signed Up Sucefully!</string>
    <string name="ActualT">Actual Temperature: </string>
    <string name="Visiting">Number of visitors: </string>
    <string name="title_activity_results">Results</string>
    <string name="Tmin">Minimun Temperature: </string>
    <string name="TMax">Maximun Temperature: </string>
    <string name="Hum">Humidity: </string>

</resources>
